<resources>
    <string name="app_name">The Contacts App</string>
    <string name="search_contact_by_name">Search contact by name</string>
    <string name="preparing_the_app">Preparing the app</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="star">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="plus">+</string>
    <string name="contacts">Contacts</string>
    <string name="dial">Dial</string>
    <string name="recent">Recent</string>
    <string name="all">All</string>
    <string name="share">Share</string>
    <string name="abc">ABC</string>
    <string name="def">DEF</string>
    <string name="ghi">GHI</string>
    <string name="jkl">JKL</string>
    <string name="mno">MNO</string>
    <string name="pqrs">PQRS</string>
    <string name="tuv">TUV</string>
    <string name="wxyz">WXYZ</string>
    <string name="loading">Loading…</string>
    <string name="permission_text">The application cannot work without this permission</string>
</resources>
