<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_dial"
        android:enabled="true"
        android:icon="@drawable/ic_dialpad_white_24dp"
        android:title="@string/dial"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recent"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/recent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_all"
        android:enabled="true"
        android:icon="@drawable/ic_contacts_white_24dp"
        android:title="@string/all"
        app:showAsAction="ifRoom" />
    <!--<item-->
        <!--android:id="@+id/action_share"-->
        <!--android:enabled="true"-->
        <!--android:icon="@drawable/ic_share_white_24dp"-->
        <!--android:title="@string/share"-->
        <!--app:showAsAction="ifRoom" />-->
</menu>